# CM3D

./: AUTHORS.rst  LICENSE.txt  README.md  environment.yml  setup.cfg
src/cm3d/: __init__.py  cli.py  connection.py  database.py  ingest.py  model.py  utils.py  web.py
src/cm3d.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/cm3d/resources/: CM3d_input_template.xlsx  filters.json
src/cm3d/templates/: base.html  index.html  logout.html  query.html  studies.html  study.html  upload.html
tests/: fixing_test_ingest.py  test_crud.py  test_ingest.py
