[metadata]
name = cm3d
description = A database for storing a 3d cancer model data
author = 'Simao Laranjeira'
author_email = 's.laranjiera@ucl.ac.uk'
license = MIT
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown
# url = https://github.com/UCL/NGCDB
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
version = 0.1

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    = src
install_requires =
    importlib-metadata; python_version<"3.8"

[options.packages.find]
where = src
exclude =
    tests

[options.package_data]
* = *.css, *.xlsx, *.json

[options.extras_require]
testing =
    setuptools
    pytest

[options.entry_points]
console_scripts =
     cm3d-cli = cm3d.cli:cli
